--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "expo-auth-session": "^7.0.8",
     "expo-av": "^16.0.7",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.12",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.11",
     "expo-vector-icons": "^10.0.1",
     "expo-web-browser": "^15.0.7",
     "react": "19.1.0",
