Refactor ToursScreen and appStore for improved package handling and pagination
- Renamed 'location' to 'locationName' in TourPackage interface for clarity.
- Updated fetchPackages and related methods to include pagination parameters.
- Implemented load more functionality in ToursScreen with a new handleLoadMore method.
- Added footer component to indicate loading more tours and display end message.
- Enhanced error handling and retry logic in appStore for package fetching.
- Introduced new interfaces for reviews and bookings, including methods for fetching and creating reviews and bookings.
- Improved state management for loading and error states in both packages and reviews.

--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,31 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
+      }
+    },
+    "device": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
+      }
     },
     "production": {
       "autoIncrement": true
+    },
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      },
+      "distribution": "internal"
     }
   },
   "submit": {
