--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-av": "^16.0.7",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.12",
+    "expo-image-picker": "^17.0.8",
+    "expo-media-library": "^18.2.0",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.11",
     "expo-vector-icons": "^10.0.1",
